send event directly from backend
