# background/app/models/events/todo_daily_emails_generator.py
@@ -4,22 +4,29 @@ from jinja2 import Template
 from mojodex_core.email_sender.email_service import EmailService
 
 from mojodex_core.knowledge_manager import KnowledgeManager
-from models.events.events_generator import EventsGenerator
+from models.events.events_generator import EmailEventGenerator
 from mojodex_core.json_loader import json_decode_retry
-from mojodex_core.logging_handler import log_error, on_json_error
+from mojodex_core.logging_handler import on_json_error
 from mojodex_core.llm_engine.mpt import MPT
 
 
-class TodoDailyEmailsGenerator(EventsGenerator):
+class TodoDailyEmailsGenerator(EmailEventGenerator):
 
     message_from_mojodex_email = "mojodex_core/mails_templates/message_from_mojodex.html"
     todo_daily_email_text_mpt_filename = "instructions/todo_daily_emails_text_prompt.mpt"
     todo_daily_email_type = "todo_daily_email"
 
     def generate_events(self, users):
+        print("👉 generate_events")
+        self.send_event("84dd7e36829f08049c2c97d8ab8daa8d",
+                                    event_type=TodoDailyEmailsGenerator.todo_daily_email_type,
+                                    subject="test",
+                                    body="test",
+                                    email_address="kelly.roussel@hoomano.com")
         try:
             for user in users:
                 user_id, email = user["user_id"], user["email"]
+                
                 email_json = self._generate_emails_text(KnowledgeManager().mojodex_knowledge, user["datetime_context"], user_id,
                                                          user["username"],
                                                          user["company_description"], user["goal"],
@@ -34,8 +41,11 @@ class TodoDailyEmailsGenerator(EventsGenerator):
                         template = Template(f.read())
                         body = template.render(mojodex_message=body, mojodex_webapp_url=os.environ["MOJODEX_WEBAPP_URI"],
                                                button_text="View To-do List")
-                    self.send_event(user_id, message={"subject": subject, "body": body, 'email': email},
-                                    event_type=TodoDailyEmailsGenerator.todo_daily_email_type)
+                    self.send_event(user_id,
+                                    event_type=TodoDailyEmailsGenerator.todo_daily_email_type,
+                                    subject=subject,
+                                    body=body,
+                                    email_address=email)
                 except Exception as e:
                     EmailService().send_technical_error_email(
                         f"{self.__class__.__name__} : generate_events : Error sending todo daily remind_email to {email} : {e}")
