# docs/openAPI/backend_api.yaml
@@ -737,87 +737,6 @@ paths:
                 properties:
                   error:
                     type: string
-  /event:
-    put:
-      tags:
-        - Background
-      summary: Add a new event for a user
-      parameters:
-        - in: header
-          name: Authorization
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - datetime
-                - user_id
-                - message
-                - event_type
-              properties:
-                datetime:
-                  type: string
-                  format: date-time
-                user_id:
-                  type: string
-                message:
-                  type: object
-                  properties:
-                    title:
-                      type: string
-                    body:
-                      type: string
-                    subject:
-                      type: string
-                    email:
-                      type: string
-                event_type:
-                  type: string
-                data:
-                  type: object
-                  additionalProperties: true
-      responses:
-        '200':
-          description: Event created successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  event_pk:
-                    type: integer
-        '400':
-          description: Invalid request or missing fields
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-        '403':
-          description: Authentication error due to wrong or missing secret
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-        '500':
-          description: Error occurred while creating the event
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
   /extract_todos:
     post:
       tags:
